--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -251,6 +251,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    line-clamp: 2; /* Standard property for compatibility */
   }
 }
 
